<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/ic_baseline_shopping_bag_24"
            android:title="@string/menu_my_products" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_liked_items" />
        <item
            android:id="@+id/nav_map_view"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map_view" />
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="user profile" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/menu_sign_out" />

    </group>
</menu>